.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Financial_Reporting__c.object
<CustomObject>
    <description>Payroll
Collates all cost data for accounting integration</description>
    <fields>
        <fullName>xcdhcm__Account__c</fullName>
        <label>Account</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Benefit_scheme__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Benefit scheme</label>
        <referenceTo>xcdhcm__Company_Benefits__c</referenceTo>
        <relationshipLabel>Benefit schemes</relationshipLabel>
        <relationshipName>Financial_Reporting_Benefit_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company_code__c</fullName>
        <label>Company code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Credit_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Debit_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Debit amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department_code__c</fullName>
        <label>Department code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Employee_Detail__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Financial_Reporting_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employer</label>
        <referenceTo>xcdhcm__Employer__c</referenceTo>
        <relationshipLabel>Employers</relationshipLabel>
        <relationshipName>Financial_Reporting_Employers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay detail</label>
        <referenceTo>xcdhcm__Pay_Detail__c</referenceTo>
        <relationshipLabel>Pay Details</relationshipLabel>
        <relationshipName>Financial_Reporting_Pay_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay run</label>
        <referenceTo>xcdhcm__Pay_Period__c</referenceTo>
        <relationshipLabel>Financial Reportings</relationshipLabel>
        <relationshipName>Financial_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay summary</label>
        <referenceTo>xcdhcm__Pay_Summary__c</referenceTo>
        <relationshipLabel>Pay Summaries</relationshipLabel>
        <relationshipName>Financial_Reporting_Pay_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_code__c</fullName>
        <label>Pay code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pension_scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pension scheme</label>
        <referenceTo>xcdhcm__Company_Pension_Scheme__c</referenceTo>
        <relationshipLabel>Financial Reporting</relationshipLabel>
        <relationshipName>Financial_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Post_cost_code__c</fullName>
        <label>Post cost code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Provider__c</fullName>
        <label>Provider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Supplier_code__c</fullName>
        <description>Holds the supplier cost code of pension and benefit payments.</description>
        <label>Supplier code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zPayroll_eligibility__c</fullName>
        <label>zPayroll eligibility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Financial Reporting</label>
    <nameField>
        <displayFormat>FR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Reporting</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>